--- a/config/database.yml
+++ b/config/database.yml
@@ -11,8 +11,8 @@
 
 development:
  # <<: *default
-  adapter: sqlite3
-  database: db/development.sqlite3
+  adapter: postgresql
+  database: mydatabase_developemnt
   pool: 5
   timeout: 5000
 # Warning: The database defined as "test" will be erased and
@@ -20,13 +20,13 @@ development:
 # Do not set this db to the same as development or production.
 test:
   #<<: *default
-  adapter: sqlite3
-  database: db/test.sqlite3
+  adapter: postgresql
+  database: mydatabase_test
   pool: 5
   timeout: 5000
 production:
   #<<: *default
-  adapter: sqlite3
-  database: db/production.sqlite3
+  adapter: postgresql
+  database: mydatabase_production
   pool: 5
   timeout: 5000
