--- a/config/database.yml
+++ b/config/database.yml
@@ -12,7 +12,7 @@
 development:
  # <<: *default
   adapter: postgresql
-  database: mydatabase_developemnt
+  database: db/mydatabase_developemnt
   pool: 5
   timeout: 5000
 # Warning: The database defined as "test" will be erased and
@@ -20,13 +20,13 @@ development:
 # Do not set this db to the same as development or production.
 test:
   #<<: *default
-  adapter: postgresql
-  database: mydatabase_test
+  adapter: sqlite3
+  database: db/test.sqlite3
   pool: 5
   timeout: 5000
 production:
   #<<: *default
-  adapter: postgresql
-  database: mydatabase_production
+  adapter: sqlite3
+  database: db/production.sqlite3
   pool: 5
   timeout: 5000
