--- a/config/database.yml
+++ b/config/database.yml
@@ -20,13 +20,13 @@ development:
 # Do not set this db to the same as development or production.
 test:
   #<<: *default
-  adapter: sqlite3
-  database: db/test.sqlite3
+  adapter: postgresql
+  database: db/mydatabase_test
   pool: 5
   timeout: 5000
 production:
   #<<: *default
-  adapter: sqlite3
-  database: db/production.sqlite3
+  adapter: postgresql
+  database: db/mydatabase_production
   pool: 5
   timeout: 5000
