--- a/config/database.yml
+++ b/config/database.yml
@@ -15,18 +15,20 @@ development:
   database: db/mydatabase_developemnt
   pool: 5
   timeout: 5000
+  username: postgres
+  password:1234
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
   #<<: *default
-  adapter: postgresql
+  adapter: sqlite3
   database: db/mydatabase_test
   pool: 5
   timeout: 5000
 production:
   #<<: *default
-  adapter: postgresql
+  adapter: sqlite3
   database: db/mydatabase_production
   pool: 5
   timeout: 5000
